# Puntu

./: .gitignore  COMMANDS.md  Cargo.toml  PLAN.md  README.md  config.example.toml  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
data/: en.words  ru.words
src/: action.rs  buffer.rs  clipboard.rs  config.rs  hotkeys.rs  ibus.rs  ipc.rs  keymap.rs  layout.rs  lib.rs  main.rs
src/detect/: mod.rs  ngram.rs  translit.rs  userdict.rs
src/ibus/: engine.rs  runtime.rs
src/input/: capture.rs  devices.rs  emitter.rs  mod.rs
systemd/: puntu-tray.service  puntu.service
udev/: 99-puntu-uinput.rules  uinput.conf
